fix menu buttons on mobile

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -184,7 +184,6 @@
 }
 .page-header__element-link--active {
   color: #766357;
-  background-color: #ffffff;
   &:hover {
     color: #604e43;
   }
